# AI-Evolution-Graph

./: .env.example  .gitignore  ADVERSARIAL_AUDIT_REPORT.md  CLAUDE.md  LICENSE  README.md  REPORT_GENERATED.txt  STEP64_ADVERSARIAL_AUDIT_REPORT.md  STEP64_VULNERABILITY_SUMMARY.txt  check_arxiv_data.py  check_data.py  docker-compose.yml  merge_plan.json  pyproject.toml  pytest.ini
.claude/: settings.local.json
docs/: 00_setup.md  01_TemporalCitationGraph.md  02_MethodEvolutionGraph.md  03_retrieval.md  04_ranking.md  05_analytical.md  06_interface.md  07_experiment.md  08_deployment.md  STATUS.md  STRUCTURE.md  TECHSPEC.md  embedding_pipeline_plan.md  normalization_improvement_plan.md  project_setup.md  trend_split_plan.md
frontend/: next.config.ts
scripts/: dedup_methods.py  ingest.py
tests/: test_api_layer_adversarial.py  test_api_routers.py  test_api_schemas_adversarial.py  test_arxiv_client.py  test_breakthrough_detection_service.py  test_centrality_ranking_service.py  test_citation_graph_service.py  test_combined_ranking_service.py  test_domain_models.py  test_e2e_adversarial.py  test_e2e_pipeline.py  test_embedding_ranking_service.py  test_entity_normalization_service.py  test_evolution_path_service.py  test_graph_retrieval_service.py  test_hybrid_retrieval_service.py  test_llm_entity_normalizer.py  test_llm_method_extractor.py  test_method_extraction_service.py  test_method_graph_service.py  test_neo4j_graph_repository.py  test_neo4j_method_trend_repository.py  test_openai_embedding_client.py  test_paper_filter.py  test_semantic_scholar_client.py  (+4 more)
(+12467 files in other folders)
